UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/ftr_Asset_StagingCircuit_DPI__c.object-meta.xml
<CustomObject>
    <label>ftr_Asset_StagingCircuit_DPI</label>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>ftr_Asset_StagingCircuit_DPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ftr_Asset_StagingCircuit_DPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>