UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/BTN__c.field-meta.xml
<CustomField>
    <fullName>BTN__c</fullName>
    <label>BTN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>