UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/City_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Short_Name__c</fullName>
    <label>City Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>