UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/CODE__c.field-meta.xml
<CustomField>
    <fullName>CODE__c</fullName>
    <label>CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>