UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <label>DESCRIPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>