UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/END_DT__c.field-meta.xml
<CustomField>
    <fullName>END_DT__c</fullName>
    <label>END_DT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>