UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/ENV__c.field-meta.xml
<CustomField>
    <fullName>ENV__c</fullName>
    <label>ENV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>