UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/GAN__c.field-meta.xml
<CustomField>
    <fullName>GAN__c</fullName>
    <label>GAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>