UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/Indate__c.field-meta.xml
<CustomField>
    <fullName>Indate__c</fullName>
    <label>Indate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>