UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/ITEMRATE__c.field-meta.xml
<CustomField>
    <fullName>ITEMRATE__c</fullName>
    <label>ITEMRATE</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>