UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <label>Service Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>