UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/Summary_TN__c.field-meta.xml
<CustomField>
    <fullName>Summary_TN__c</fullName>
    <label>Summary TN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>