UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit_DPI__c/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEST</label>
    <type>Checkbox</type>
</CustomField>